# Emocore

./: EmoCore: A Governance Primitive for Persistent Agents  LICENSE  README.md  generate_readme_diagrams.py  pyproject.toml
BENCHMARKS/: README.md  demo.py  demo_failure.py  infinite_loop.py  post_halt_integrity.py  profile_divergence.py  recovery_boundary.py  urgency_flood.py
LLM testing/: README.md  llm_loop_emocore.py  llm_loop_raw.py  post_halt_integrity_emocore.py  post_halt_integrity_raw.py  profile_divergence_emocore.py  profile_divergence_raw.py  recovery_boundary_emocore.py  recovery_boundary_raw.py  urgency_flood_emocore.py  urgency_flood_raw.py
core/: agent.py  engine.py  failures.py  governance.py
docs/: ADAPTER_LAYER.md  ARCHITECTURE.md  DEFINITION.md  EmoCore Doctrine.md  EmoCore Framework.md  FAILURE_MODES.md  FORMAL_SPECIFICATION.md  LIMITATIONS.md  NON_GOALS.md  README.md  ROADMAP_V0.7.md  SIGNAL_SPECIFICATION.md  TERMINOLOGY.md  WHY_EMOCORE.md  specs_0.5_BASE_PROTOTYPE.md  specs_v0.7_STABLE.md
emocore/: guarantees.py
examples/: autogen_integration.py  boring_success.py  crewai_integration.py  file_churn_detection.py  infinite_loop_fix.py  langchain_integration.py  llm_adapter_demo.py  openai_agents_integration.py  retry_storm.py  visualizer.py
experiments/: README.md  find_max_risk.py  find_overrisk.py
integrations/: README.md  autogen_ollama.py  autogen_openai.py  crewai_ollama.py  crewai_openai.py  langchain_ollama.py  langchain_openai.py  openai_sdk.py  openai_sdk_ollama.py
issues/: debug_read.py  reproduce_issue.py
(+56 files in other folders)
